# GemScanner

./: .gitignore  README.md  config.example.yaml  project.example.yaml  pyproject.toml
.superpowers/sdd/: final-fixes-b-report.md  task-b8-report.md
docs/: baumer-exg50-features.md  usage.md
firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
firmware/host_test/: CMakeLists.txt  minunit.h  test_command_parser.c  test_fmt_num.c  test_motion_math.c  test_ramp.c  test_scaffold.c
firmware/main/: CMakeLists.txt  app_main.c  controller.c  controller.h  idf_component.yml  pins.h  status_display.c  status_display.h  stepper.c  stepper.h  usb_cdc.c  usb_cdc.h
gemscanner/: cli.py  config.py  coords.py  run_scan.py  smoothing.py  viewer.py
gemscanner/acquisition/: prescan.py  scan_controller.py
gemscanner/calibration/: axis_probe.py  calibration.py  fit.py
gemscanner/camera/: base.py  baumer_camera.py  factory.py  gentl_camera.py  mock.py  opencv_camera.py
gemscanner/geometry/: halfplane.py  polygon.py
gemscanner/gui/: analysis.py  app.py  controls_panel.py  main_window.py  preview_widget.py  project.py  queue_panel.py  reconstruction_panel.py  session.py  style.qss  wizard_panel.py  worker.py
gemscanner/motion/: fake_firmware.py  stage.py  transport.py
gemscanner/reconstruction/: base.py  facet_fit.py  mesh.py  pipeline.py  soft_hull.py  strip_intersection.py  support.py
gemscanner/storage/: dataset.py  manifest.py  mesh_io.py
gemscanner/synthetic/: generator.py  toy_gem.py
gemscanner/testing/: scene_camera.py
gemscanner/vision/: silhouette.py
scratchpad/cleanroom/: bakeoff.py  cand_a_gem04.stl  cand_a_ransac.py  cand_b_dual.py  cand_b_gem04.stl  cand_c_egi.py  cand_c_gem04.stl  polytope.py  render.py  strike_metric.py  support_samples.py  test_candidates.py  test_polytope.py  test_strike_metric.py  test_support_samples.py
scripts/: README.md  _common.py  calibrate_axis.py  calibrate_scale.py  calibrate_steps.py  check_fov.py  grab.py  smoke_motion.py  validate_facet_gem04.py
tests/: test_cli.py  test_config.py  test_coords.py  test_end_to_end.py  test_end_to_end_scan.py  test_smoke.py  test_smoothing.py  test_viewer.py
tests/acquisition/: test_prescan.py  test_scan_controller.py
tests/calibration/: test_axis_probe.py  test_calibration.py  test_fit.py
tests/camera/: test_factory.py  test_mock.py
tests/geometry/: test_halfplane.py  test_polygon.py
tests/gui/: test_analysis.py  test_project.py  test_reconstruction_panel.py  test_session.py  test_widgets.py  test_worker.py
tests/motion/: test_fake_firmware.py  test_stage.py
tests/reconstruction/: test_base.py  test_facet_fit.py  test_facet_reconstruct.py  test_mesh.py  test_pipeline.py  test_pipeline_facet.py  test_soft_hull.py  (+2 more)
(+36 files in other folders)
