[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemscanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "opencv-python", "trimesh", "pyserial", "open3d", "pyyaml", "harvesters", "PySide6"]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt"]

[project.scripts]
gemscanner = "gemscanner.cli:main"

[tool.setuptools.packages.find]
include = ["gemscanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
