[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemscanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "opencv-python", "trimesh", "pyserial", "open3d", "pyyaml", "harvesters", "PySide6", "scikit-image"]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt"]

[project.scripts]
gemscanner = "gemscanner.cli:main"

[tool.setuptools.packages.find]
include = ["gemscanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # upstream: skimage.marching_cubes sets ndarray.shape, deprecated in NumPy 2.5
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]
